--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ dependencies = [
     "uvicorn[standard]>=0.23.0",
     "streamlit>=1.12.0,<2.0.0",
     "requests>=2.31.0",
+    "python-dotenv>=1.0.1",
+    "duckdb>=0.10.2",
+    "pytest>=8.0.0",
 ]
 
 [tool.setuptools.packages.find]
